evert "prevent double scrollbar when we have a modal larger than the viewport"
This reverts commit 2ace4c57d0a1b5d0030139c28d7d72e071d8b4d8.

--- a/view/theme/redbasic/css/style.css
+++ b/view/theme/redbasic/css/style.css
@@ -9,6 +9,7 @@
 /* generals */
 html {
 	font-size: 100%;
+	overflow-x: hidden;
 }
 
 body {
